--- a/style.css
+++ b/style.css
@@ -201,10 +201,15 @@ button:hover,
     color: #796f6f;
 }
 
+.clear {
+    margin-top: 15px;
+}
+
 .resultcontainer {
-    min-height: 100px;
-    min-width: 400px;
-    height: 100%;
+    /* min-height: 100px; */
+    /* min-width: 400px; */
+    width: 100%;
+    /* height: 100%; */
     display: flex;
     justify-self: center;
     display: flex;
